# wisodown

./: .gitignore  Cargo.toml  README.md  THIRD_PARTY_LICENSES  build.rs
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/guide/: how-it-works.md  quick-start.md  usage.md
docs/zh/: index.md
docs/zh/guide/: how-it-works.md  quick-start.md  usage.md
frontend/: index.html  package.json  worker.ts  wrangler.jsonc
scripts/: get-iso.ps1  get-iso.sh
src/: client.rs  download.rs  edition.rs  lib.rs  main.rs  parse.rs  server.rs  types.rs  wasm.rs
worker/: package.json  worker-configuration.d.ts  wrangler.jsonc
worker/src/: App.tsx  i18n.ts  main.tsx
worker/worker/: index.ts
