[package]
name = "windows-iso-downloader"
version = "0.1.0"
edition = "2021"
description = "Download Windows 10 and Windows 11 ISOs directly from Microsoft"

[[bin]]
name = "wisodown"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
indicatif = "0.17"
futures-util = "0.3"
bytes = "1"
sha2 = "0.10"
hex = "0.4"
