[package]
name = "windows-iso-downloader"
version = "0.1.0"
edition = "2021"
description = "Download Windows 10 and Windows 11 ISOs directly from Microsoft"
license = "GPL-3.0-only"

[lib]
name = "windows_iso_downloader"
path = "src/lib.rs"

[[bin]]
name = "wisodown"
path = "src/main.rs"

# ── Core dependencies (all targets including wasm) ──────────────────────────
[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
sha2 = "0.10"
hex = "0.4"

# ── Native-only dependencies ────────────────────────────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "stream", "cookies"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
futures-util = "0.3"
bytes = "1"

# ── Wasm-only dependencies ──────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", features = ["json"] }
uuid = { version = "1", features = ["v4", "js"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
